@@ -45,6 +45,8 @@ Tolerate color, bold, underline, etc. #129334
 
 Tolerate stderr.  #420377 #155227 #225549
 
+Tolerate VT100 line-drawing characters. Maybe translate them.
+
 ---------------------- w --------------------------
 
 The LOGIN@ column sometimes has a space in it. This makes correct
